# homework_arch_po

./: .gitignore  CMakeLists.txt  Conanfile.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  restart.sh  setup_env.sh  start.sh  test.sh
code/: CMakeLists.txt  README.md  create_db.sh  index.html  tests.cpp
code/content/: main.html  search.html  signup.html
code/database/: chat.h  friends.h  person.h
code/web_server/: config.cpp  config.h  httprequestfactory.h  httpwebserver.h
code/web_server/handlers/: ImportHandler.h  LoginHandler.h  SignupHandler.h  TimeRequestHandler.h
content/: index.html  main.html  signup.html
database/: chat.h  database.cpp  database.h  database_mysql.cpp  database_mysql.h  friends.h  person.h
web_server/: config.cpp  httprequestfactory.h  httpwebserver.h
web_server/handlers/: ConfigHandler.h  FriendsHandler.h  LoginHandler.h  PersonHandler.h  SearchHandler.h  SignupHandler.h  WebPageHandler.h
web_server/session/: session.cpp  session.h
